setting up plugin/dependencies

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint-plugin-react-hooks": "^4.6.0",
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +17,10 @@
   },
   "devDependencies": {
     "@types/node": "20.4.5",
-    "@types/react": "18.2.17"
+    "@types/react": "18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.46.0",
+    "eslint-plugin-react": "^7.33.1"
   }
 }
